--- a/index.html
+++ b/index.html
@@ -1,161 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Systematic Industries Ltd - IoT Dashboard Login</title>
-    <!-- Add Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-    <!-- Firebase Authentication -->
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-    <!-- Firebase Database -->
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-    <style>
-        /* General reset */
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-
-        /* Body styling */
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f0f3f5;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            color: #333;
-        }
-
-        /* Container for the form */
-        .login-container {
-            background-color: #ffffff;
-            padding: 40px;
-            max-width: 400px;
-            width: 100%;
-            border-radius: 10px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
-
-        /* Company branding */
-        .login-container h1 {
-            color: #007BFF;
-            font-size: 26px;
-            margin-bottom: 20px;
-        }
-
-        .login-container p {
-            font-size: 14px;
-            color: #666;
-            margin-bottom: 20px;
-        }
-
-        /* Input field styling */
-        input[type="text"], input[type="password"] {
-            width: 100%;
-            padding: 12px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 16px;
-        }
-
-        /* Button styling */
-        button {
-            width: 100%;
-            padding: 12px;
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
-        /* Error message styling */
-        .error-message {
-            color: red;
-            font-size: 14px;
-            margin-top: 10px;
-            display: none; /* Initially hidden */
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Login</title>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
+  <script src="firebase-config.js"></script> <!-- Import Firebase Config -->
 </head>
 <body>
-    <div class="login-container">
-        <h1>Welcome to Systematic Industries Ltd</h1>
-        <p>Log in to access the IoT Dashboard</p>
 
-        <!-- Input fields for email and password -->
-        <input type="email" id="emailInput" placeholder="Email">
-        <input type="password" id="passwordInput" placeholder="Password">
-        
-        <button id="loginButton">Log In</button>
+  <h2>Login Page</h2>
 
-        <!-- Error message -->
-        <div class="error-message" id="errorMessage">
-            Incorrect email or password. Please try again.
-        </div>
-    </div>
+  <input type="email" id="email" placeholder="Email"><br><br>
+  <input type="password" id="password" placeholder="Password"><br><br>
+  <button onclick="login()">Login</button>
 
-    <script>
-        // Firebase configuration
-        const firebaseConfig = {
-            apiKey: "AIzaSyBIf_5OwMDRKm35I0x3v5LbibYyrBrug9k",
-            authDomain: "customer-2-88220.firebaseapp.com",
-            databaseURL: "https://customer-2-88220-default-rtdb.firebaseio.com",
-            projectId: "customer-2-88220",
-            storageBucket: "customer-2-88220.appspot.com",
-            messagingSenderId: "1234567890",
-            appId: "1:1234567890:web:abcdef1234567890"
-        };
+  <script>
+    function login() {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
 
-        // Initialize Firebase
-        const app = firebase.initializeApp(firebaseConfig);
-        const auth = firebase.auth();
-        const database = firebase.database();
-
-        // Check if user is already logged in
-        auth.onAuthStateChanged((user) => {
-            if (user) {
-                console.log('User is logged in:', user);
-                window.location.href = 'main.html'; // Redirect to main page if logged in
-            } else {
-                console.log('User is not logged in');
-            }
+      auth.signInWithEmailAndPassword(email, password)
+        .then((userCredential) => {
+          alert("Login Successful!");
+          // Redirect to main page
+          window.location.href = "main.html";
+        })
+        .catch((error) => {
+          alert("Login Failed: " + error.message);
         });
+    }
 
-        // Handle login
-        document.getElementById('loginButton').addEventListener('click', function() {
-            const email = document.getElementById('emailInput').value;
-            const password = document.getElementById('passwordInput').value;
+    // Auto-redirect if already logged in
+    auth.onAuthStateChanged((user) => {
+      if (user) {
+        window.location.href = "main.html";
+      }
+    });
+  </script>
 
-            // Sign in with Firebase
-            auth.signInWithEmailAndPassword(email, password)
-                .then((userCredential) => {
-                    // Login successful
-                    console.log('Login successful:', userCredential.user);
-                    window.location.href = 'main.html'; // Redirect to main page
-                })
-                .catch((error) => {
-                    // Show error message
-                    document.getElementById('errorMessage').style.display = 'block';
-                    console.error('Login error:', error.message);
-                });
-        });
-
-        // Disable right-click context menu
-        document.addEventListener('contextmenu', function(event) {
-            event.preventDefault();
-        });
-    </script>
 </body>
 </html>
